--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Your site is ready to be published at https://tpino92.github.io/food-festival/.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "build": "webpack"
-  },
+    "build": "webpack",
+    "start:dev": "webpack serve",
+    "test": "echo \"Error: no test specified\" && exit 1"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TPino92/food-festival.git"
@@ -20,8 +21,12 @@
   },
   "homepage": "https://github.com/TPino92/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
     "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-bundle-analyzer": "^4.2.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
